# Dissertacao

./: .gitignore  Baselines.ipynb  CITATION.cff  CodeBase.ipynb  Geradado.ipynb  LICENSE.md  Library.yaml  Mario.py  README.md  Teste.ipynb  Teste1.ipynb  agent.py  agent_dqn1.ipynb  class_experiment.py  config.py  environment.py  loops.py  main.ipynb  main.py  model_factory.py  optimize_hyperparameters.py  optuna.db  pyproject.toml  q_agent.py  random_agent.py  requirements.in  requirements.txt  resultados.csv  rominfo.py  style.mplstyle  supervised_ml.py  teste.ipynb  teste.py  teste_workspace.code-workspace  train.py  utils.py  viz.py
data/quali/: optimize_hyperparameters.py
notebooks/: CodeBase.ipynb  InformationTheory.ipynb  MutualInfoEstimatorsComparison.ipynb  PaperReplicationSaxe.ipynb  gerar_inclusao.ipynb  teste.ipynb
quali/: Geradado.ipynb  main.ipynb
saved_agents/CartPole-v1/0/: hparams.json  mean_states.npy  model  std_states.npy
saved_agents/CartPole-v1/1/: hparams.json  mean_states.npy  model  std_states.npy
saved_agents/CartPole-v1/2/: hparams.json  mean_states.npy  model  std_states.npy
saved_agents/CartPole-v1/3/: hparams.json  mean_states.npy  model  std_states.npy
saved_agents/CartPole-v1/4/: hparams.json  model
saved_agents/CartPole-v1/5/: hparams.json  mean_states.npy  model  std_states.npy
saved_agents/CartPole-v1/6/: hparams.json  model  (+2 more)
src/: CodeBase.ipynb  GeraPlots.ipynb  GeraPlots.py  PresentationRL.ipynb  class_LQR_controller.py  class_experiment.py  class_ppo.py  style.mplstyle  teste.ipynb  teste_codebase.py  utils.py
(+16 files in other folders)
