[project]
name = "dissertacao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=1.2.0",
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.7",
    "keyboard>=0.13.5",
    "matplotlib>=3.10.5",
    "mlflow>=3.1.4",
    "npeet",
    "numpy>=2.2.6",
    "optuna>=4.4.0",
    "pympler>=1.1",
    "pynput>=1.8.1",
    "rich>=14.1.0",
    "scipy>=1.15.3",
    "stable-baselines3[extra]>=2.7.0",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
npeet = { git = "https://github.com/gregversteeg/NPEET" }
